fix(core): dropdown content spacing
- move content spacing between header and footer from gap/padding on content to margin on header/footer

--- a/projects/elements/src/dropdown/dropdown-footer.css
+++ b/projects/elements/src/dropdown/dropdown-footer.css
@@ -4,7 +4,7 @@
   --gap: var(--nve-ref-space-sm);
   display: block;
   width: calc(100% + calc(var(--padding) * 2));
-  margin: auto calc(var(--padding) * -1) 0 calc(var(--padding) * -1);
+  margin: var(--padding) calc(var(--padding) * -1) 0 calc(var(--padding) * -1);
 }
 
 [internal-host] {
